--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,11 @@
     <%= javascript_importmap_tags %>
     <%= action_cable_meta_tag %>
     <%= hotwire_livereload_tags if Rails.env.development? %>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container">
       <%= yield %>
     </main>
   </body>
