--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -12,5 +12,6 @@
   <div class="col-span-3 bg-white p-4 shadow">
     Datos basicos y buscadores
   </div>
+  <%= current_user.email %>
   <%= button_to "logout", destroy_user_session_path, method: :delete %>
 </div>
